final etl data warehouse

--- a/Milestone 4 - CIS 4400 - ETL.ipynb
+++ b/Milestone 4 - CIS 4400 - ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "4   Vietnam  VNM    98168829               2.27         238458  6.614880e+11"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "[850 rows x 20 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,26 +535,22 @@
     "cov_data.rename(columns={'iso_code':'Code', \"location\":\"Entity\"}, inplace=True)\n",
     "\n",
     "# Final Merge\n",
-    "merge_data = pd.merge(cov_data, merge_data_3)\n",
+    "merge_data = pd.merge(cov_data, location_data)\n",
     "merge_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:05,  5.20s/it]\n",
-      "1it [00:04,  4.86s/it]\n",
-      "1it [00:03,  3.03s/it]\n",
-      "1it [00:05,  5.48s/it]\n",
-      "1it [00:04,  4.03s/it]\n",
-      "1it [00:06,  6.99s/it]\n",
-      "1it [00:03,  3.52s/it]\n"
+      "1it [00:03,  3.39s/it]\n",
+      "1it [00:03,  3.24s/it]\n",
+      "1it [00:04,  4.28s/it]\n"
      ]
     },
     {
@@ -567,10 +563,6 @@
    ],
    "source": [
     "# Load dataframes onto Big Query\n",
-    "pop_data.to_gbq(destination_table=\"cis-4400-baruch-hung-tran.project_cis4400.pop_data\", project_id=\"cis-4400-baruch-hung-tran\", if_exists=\"replace\")\n",
-    "unempl_data.to_gbq(destination_table=\"cis-4400-baruch-hung-tran.project_cis4400.unempl_data\", project_id=\"cis-4400-baruch-hung-tran\", if_exists=\"replace\")\n",
-    "hos_data.to_gbq(destination_table=\"cis-4400-baruch-hung-tran.project_cis4400.hos_data\", project_id=\"cis-4400-baruch-hung-tran\", if_exists=\"replace\")\n",
-    "gdp_data.to_gbq(destination_table=\"cis-4400-baruch-hung-tran.project_cis4400.gdp_data\", project_id=\"cis-4400-baruch-hung-tran\", if_exists=\"replace\")\n",
     "cov_data.to_gbq(destination_table=\"cis-4400-baruch-hung-tran.project_cis4400.cov_data\", project_id=\"cis-4400-baruch-hung-tran\", if_exists=\"replace\")\n",
     "merge_data.to_gbq(destination_table=\"cis-4400-baruch-hung-tran.project_cis4400.all_info\", project_id=\"cis-4400-baruch-hung-tran\", if_exists=\"replace\")\n",
     "location_data.to_gbq(destination_table=\"cis-4400-baruch-hung-tran.project_cis4400.location_data\", project_id=\"cis-4400-baruch-hung-tran\", if_exists=\"replace\")\n",
